--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-    app:
+    frankenphp_app:
         build:
             context: .
             dockerfile: Dockerfile
