chore: docker compose to keep vendor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
         container_name: frankenphp_app
         restart: unless-stopped
         volumes:
-            - ./:/app
             - ./.env:/app/.env
+            - ./storage:/app/storage
+            - ./bootstrap/cache:/app/bootstrap/cache
         ports:
             - "9001:80"
         depends_on:
