--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
         container_name: frankenphp_app
         restart: unless-stopped
         volumes:
-            - ./:/app
+            - ./public/build:/app/public/build
+            - laravel_storage:/app/storage
+            - laravel_cache:/app/bootstrap/cache
         ports:
             - "9001:80"
         depends_on:
