--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,6 @@ services:
             - postgres_data:/var/lib/postgresql/data
 
 volumes:
+    laravel_storage:
+    laravel_cache:
     postgres_data:
